--- a/src/app/pages/previsao/previsao.page.html
+++ b/src/app/pages/previsao/previsao.page.html
@@ -2,9 +2,17 @@
   <ion-toolbar>
     <ion-buttons>
       <ion-back-button defaultHref="/"></ion-back-button>
+      <ion-title>Previsao do tempo</ion-title>
     </ion-buttons>
-    <ion-title>Previsao do tempo</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content> </ion-content>
+<ion-content>
+  <h1>
+    {{ resposta?.main.temp }}
+  </h1>
+  <p>
+    {{ (resposta?.weather)[0].description }}
+    <img [src]="icone" />
+  </p>
+</ion-content>
